--- a/about/index.html
+++ b/about/index.html
@@ -10,17 +10,10 @@ title: About
     <div class="about-contact">
         <a href="mailto:{{ site.email }}"><i class="icon-mail-squared"></i></a>
         <a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="icon-github-circled"></i></a>
-        <a href="{{ site.weibo_url }}" target="_blank"><i class="icon-weibo"></i></a>
+        <!-- <a href="{{ site.weibo_url }}" target="_blank"><i class="icon-weibo"></i></a> -->
     </div>
     <div class="about-description">
-        <p>生于 6 月的双子座</p><p>ENFP-T</p><br>
-        <p>Technical Artist</p><br>
-        <p>Houdini</p><p>Substance Designer</p><p>学习中</p><br>
-        <p>过期 JK</p><p>宅舞</p><p>乙女ゲーム</p><br>
-        <p>The Sims</p><p>どうぶつの森</p><p>たまごっち</p><p>アトリエ</p><p>金色のコルダ</p><br>
-        <p>音游已退坑</p><p>太鼓の達人</p><p>Jubeat</p><p>Dance Evolution</p><br>
-        <p>Sum 41</p><p>Survive Said The Prophet</p><p>Keshi</p><p>Vocaloid</p><p>BEMANI</p><br>
-        <p>努力变成一个有趣的人</p>
+        <p>前端</p><p>ai视频插帧</p><p>学习中</p><br>
     </div>
     <!-- <div class="about-wrapper about-contact">
         <h5>联系方式</h5>
@@ -33,48 +26,12 @@ title: About
             <a href="https://github.com/{{ site.github_username }}" target="_blank">{{ site.github_username }}</a>
         </p>
     </div> -->
-    <div class="about-wrapper about-links">
+    <!-- <div class="about-wrapper about-links">
         <h5>友情链接</h5>
         <h6>Lily Studio</h6>
         <p>
             <a href="https://christinenju.github.io/" target="_blank">Christine</a>
             <span></span>
         </p>
-        <p>
-            <a href="http://BUS1996.me" target="_blank">Polaris</a>
-            <span></span>
-        </p>
-        <p>
-            <a href="https://cee.moe/" target="_blank">Cee</a>
-            <span></span>
-        </p>
-
-        <h6>jfelmhbq</h6>
-        <p>
-            <a href="http://tiann.me/" target="_blank">Tian</a>
-            <span>- 小田同学</span>
-        </p>
-        
-        <p>
-            <a href="https://atlas-zqh.github.io" target="_blank">Keenan</a>
-            <span>- 最强女娲</span>
-        </p>
-        <p>
-            <a href="https://island0214.github.io/" target="_blank">Island</a>
-            <span>- 时尚教父</span>
-        </p>
-        <p>
-            <a href="https://nirvana1997.github.io/" target="_blank">Nirvana</a>
-            <span>- 老匹夫</span>
-        </p>
-        <p>
-            <a href="https://cflelf.github.io/" target="_blank">XiaorAx</a>
-            <span>- hia</span>
-        </p>
-        <p>
-            <a href="https://samperson1997.github.io/" target="_blank">Samperson</a>
-            <span>- 典型的摩羯座程序员</span>
-        </p>
-
     </div>
 </div>
