--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@ title: About
         <!-- <a href="{{ site.weibo_url }}" target="_blank"><i class="icon-weibo"></i></a> -->
     </div>
     <div class="about-description">
-        <p>前端</p><p>ai视频插帧</p><p>学习中</p><br>
+        <p>前端</p><p>ai视频修复</p><p>学习中</p><br>
     </div>
     <!-- <div class="about-wrapper about-contact">
         <h5>联系方式</h5>
